[package]
name = "soundness-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rocky <rocky@soundness.xyz>"]
description = "A CLI tool for sending proofs to Soundness Layer"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
indicatif = "0.17"
base64 = "0.21"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
rand_core = "0.6"
bip39 = { version = "1.0", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand_chacha = "0.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rpassword = "7.3"
hex = "0.4"
sha2 = "0.10"
generic-array = "0.14"
typenum = "1.16"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
